--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
     <title>Vanilla Weather App</title>
 </head>
 <body>
-    <div class="container">
+  <div class="nawv0d" data-ve-view="2338" id="Sunny">
+    <div class="UQt4rd">
+<img class="wob_tci" alt="Sunny" src="//ssl.gstatic.com/onebox/weather/64/sunny.png" id="wob_tci" data-atf="5" data-frt="0">
 
+<div jscontroller="e0Sh5" class="Ab33Nc" aria-level="3" role="heading">…
+  <div class="wtsRwe">
+    <div>
+      "Precipitation: "
+      <span id="wob_pp">0%</span>
+      <div>
+        "Humidity: "
+        <span id="wob_hm">39%</span>
+        <div>
+          
+        </div>
+        </div>
+      </div>
     </div>
+    </div>
+  </div>
+</div>
+    </div>
+  </div>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
