--- a/index.html
+++ b/index.html
@@ -23,17 +23,51 @@
         "Humidity: "
         <span id="wob_hm">39%</span>
         <div>
-          
+            "Wind: "
+          <span>
+            <span class="wob_t" id="wob_ws">16 mph
+              <span class="wob_t" style="display:none" id="wind">26 km/h</span>
+            
+            </span>
+          </span>
         </div>
         </div>
       </div>
+      <div class="VQF4g">
+        <span aria-level="3" role="heading">… </span>
+      </div>
+      <div id="wob_d">…
+        <div style="padding:10px 0">
+        <div class="ksb ksbs" aria-disabled="true" id="wob_temp" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQs6MEegQICRAD">Temperature</div>
+        <div class="ksb" aria-disabled="false" id="wob_rain" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQsqMEegQICRAE">Precipitation</div>
+       <span class="WQNOrf"></span>
+      <div class="ksb" aria-disabled="false" id="wob_wind" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQtKMEegQICRAF">Wind</div>
+      </div>
+      <div class="R3Y3ec rr3bxd">
+        <div class="wob_dfc" id="wob_dp" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQimt6BAgJEAk" style="left: 0px; top: 0px; transform: translate3d(0px, 0px, 0px); transition: -webkit-transform 0ms ease-in-out 0s;">
+        <div class="wob_df wob_ds" data-wob-di="0" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQi2soAHoECAkQCg">
+          <div class="Z1VzSb" aria-label="Thursday">Thu</div>
+          <div class="DxhUm">
+            <img class="uW5pk" alt="Sunny" src="//ssl.gstatic.com/onebox/weather/48/sunny.png" data-atf="4" data-frt="0">
+          </div>
+          <div class="wNE31c"><div class="gNCp2e"><span class="wob_t" style="display:inline">46</span><span class="wob_t" style="display:none">8</span>°</div><div class="QrNVmd ZXCv8e"><span class="wob_t" style="display:inline">29</span><span class="wob_t" style="display:none">-2</span>°</div></div>
+          </div>
+        </div>
+        <div class="wob_df" data-wob-di="2" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQi2soAnoECAkQDA"><div class="Z1VzSb" aria-label="Saturday">Sat</div><div class="DxhUm"><img class="uW5pk" alt="Partly cloudy" src="//ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" data-atf="4" data-frt="0"></div><div class="wNE31c"><div class="gNCp2e"><span class="wob_t" style="display:inline">45</span><span class="wob_t" style="display:none">7</span>°</div><div class="QrNVmd ZXCv8e"><span class="wob_t" style="display:inline">29</span><span class="wob_t" style="display:none">-2</span>°</div></div></div>
+        <div class="Z1VzSb" aria-label="Saturday">Sat</div>
+        </div>
+      </div>
+      </div>
+      <span jscontroller="eLOmLe">…</span>
     </div>
     </div>
+    <span id="z9PoV"></span>
+    <script nonce></script>
   </div>
 </div>
     </div>
   </div>
-  </div>
+  </div> 
   <script src="index.js"></script>
 </body>
 </html>
