--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
         <div class="wob_df" data-wob-di="2" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQi2soAnoECAkQDA"><div class="Z1VzSb" aria-label="Saturday">Sat</div><div class="DxhUm"><img class="uW5pk" alt="Partly cloudy" src="//ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" data-atf="4" data-frt="0"></div><div class="wNE31c"><div class="gNCp2e"><span class="wob_t" style="display:inline">45</span><span class="wob_t" style="display:none">7</span>°</div><div class="QrNVmd ZXCv8e"><span class="wob_t" style="display:inline">29</span><span class="wob_t" style="display:none">-2</span>°</div></div></div>
         <div class="Z1VzSb" aria-label="Saturday">Sat</div>
         </div>
+         <div class="wob_df" data-wob-di="3" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQi2soA3oECAkQDQ">…
+          <div class="Z1VzSb" aria-label="Sunday">Sun</div>
+          <div class="DxhUm">
+            <img class="uW5pk" alt="Sunny" src="//ssl.gstatic.com/onebox/weather/48/sunny.png" data-atf="4" data-frt="0">
+          </div>
+        <div class="wNE31c">
+<div class="gNCp2e">
+  <span class="wob_t" style="display:inline">37</span>
+  <span class="wob_t" style="display:none">3</span>
+  "°"
+</div>
+<div class="QrNVmd ZXCv8e"></div>
+        </div>
+        </div>
+        <div class="wob_df" data-wob-di="4" role="button" tabindex="0" data-ved="2ahUKEwitoa2rvrX7AhXCFlkFHbLEBtAQi2soBHoECAkQDg">
+<div class="Z1VzSb" aria-label="Monday">Mon</div>
+<div class="DxhUm">…
+  <img class="uW5pk" alt="Sunny" src="//ssl.gstatic.com/onebox/weather/48/sunny.png" data-atf="4" data-frt="0">
+</div>
+<div class="wNE31c">
+  <div class="gNCp2e">…</div>
+  <div class="QrNVmd ZXCv8e">
+    <span class="wob_t" style="display:inline">29</span>
+    "°"
+  </div>
+</div>
       </div>
       </div>
       <span jscontroller="eLOmLe">…</span>
@@ -68,6 +94,7 @@
     </div>
   </div>
   </div> 
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
