--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               </ul>
             </div>
           </div>
+            <div class="row" flex></div>
           <div class="weather-forecast" id="forecast"></div>
               <div class="row" flex></div>
             <div class="col-2">…
