--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -58,55 +58,55 @@
               </ul>
             </div>
           </div>
-            <div class="row" flex></div>
           <div class="weather-forecast" id="forecast"></div>
-              <div class="row" flex></div>
-            <div class="col-2">…
-              <div class="forecast-date">Thu</div>
-              <div class="weather-forecast-temperature"></div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
-            </div>
-            <div class="col-2">
-              <div class="forecast-date">Fri</div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-                <span class="max-temperature-forecast">46°</span>
-                <span class="min-temperature-forecast">32°</span>
+            <div class="row">
+              <div class="col-2">…
+                <div class="forecast-date">Thu</div>
+                <div class="weather-forecast-temperature"></div>
+                <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
+              </div>
+              <div class="col-2">
+                <div class="forecast-date">Fri</div>
+                <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
+                <div class="weather-forecast-temperature">
+                  <span class="max-temperature-forecast">46°</span>
+                  <span class="min-temperature-forecast">32°</span>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="forecast-date">Sat</div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="weather-forecast-temperature">
+                  <span class="max-temperature-forecast">44°</span>
+                  <span class="min-temperature-forecast">32°</span>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="forecast-date">Sun</div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="weather-forecast-temperature">
+                  <span class="max-temperture-forecast">37°</span>
+                  <span class="min-temperature-forecast">30°</span>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="forecast-date">Mon</div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="weather-forecast-temperature">
+                  <span class="max-temperature-forecast">47°</span>
+                  <span class="min-temperature-forecast">29°</span>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="forecast-date">Tue</div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="weather-forecast-temperature">
+                  <span class="max-tempeature-forecast">50°</span>
+                  <span class="min-temperature-forecast">36°</span>
+                </div>
               </div>
             </div>
-            <div class="col-2">
-              <div class="forecast-date">Sat</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-                <span class="max-temperature-forecast">44°</span>
-                <span class="min-temperature-forecast">32°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="forecast-date">Sun</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-                <span class="max-temperture-forecast">37°</span>
-                <span class="min-temperature-forecast">30°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="forecast-date">Mon</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-                <span class="max-temperature-forecast">47°</span>
-                <span class="min-temperature-forecast">29°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="forecast-date">Tue</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-                <span class="max-tempeature-forecast">50°</span>
-                <span class="min-temperature-forecast">36°</span>
-              </div>
-            </div>
-        </div>
+          </div>
         </div>
         <small>
           <a href="https://github.com/khaliasjohnson25?tab=repositories"
@@ -114,6 +114,5 @@
           Khalia Santos-Johnson
         </small>
   <script src="/vanilla-weatherApp/src/index.js"></script>
-</body>
 </body>
 </html>
