--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -64,6 +64,9 @@
                 <div class="forecast-date">Thu</div>
                 <div class="weather-forecast-temperature"></div>
                 <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
+                  <div class="weather-forecast-temperature">
+                <span class="max-temperature-forecast">46°</span>
+                <span class="min-temperature-forecast">27°</span>
               </div>
               <div class="col-2">
                 <div class="forecast-date">Fri</div>
