--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img src="" alt="" id="icon" />
+                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt="" id="icon" />
                 <div>
                   <strong id="current-temperature"></strong>
                   <span class="units"> °F </span>
