--- a/vanilla-weatherApp/index.html
+++ b/vanilla-weatherApp/index.html
@@ -70,40 +70,31 @@
               <div class="forecast-date">Fri</div>
               <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
               <div class="weather-forecast-temperature">
-                <span class="max-temperature-forecast">46°</span>
-                <span class="min-temperature-forecast">32°</span>
+               
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date">Sat</div>
               <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
               <div class="weather-forecast-temperature">
-                <span class="max-temperature-forecast">44°</span>
-                <span class="min-temperature-forecast">32°</span>
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date">Sun</div>
               <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
               <div class="weather-forecast-temperature">
-                <span class="max-temperture-forecast">37°</span>
-                <span class="min-temperature-forecast">30°</span>
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date">Mon</div>
               <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
               <div class="weather-forecast-temperature">
-                <span class="max-temperature-forecast">47°</span>
-                <span class="min-temperature-forecast">29°</span>
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date">Tue</div>
               <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
               <div class="weather-forecast-temperature">
-                <span class="max-tempeature-forecast">50°</span>
-                <span class="min-temperature-forecast">36°</span>
               </div>
             </div>
         </div>
@@ -112,6 +103,6 @@
           > Open-source code by</a>
           Khalia Santos-Johnson
         </small>
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
