--- a/vanilla-weatherApp/index.html
+++ b/vanilla-weatherApp/index.html
@@ -62,38 +62,37 @@
           <div class="weather-forecast" id="forecast"></div>
           <div class="row" flex></div>
             <div class="col-2">…
-              <div class="forecast-date">Thu</div>
-              <div class="weather-forecast-temperature"></div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
+                <div class="weather-forecast-temperature"></div>  
+                <div class="forecast-date"></div>
+              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="40">
             </div>
             <div class="col-2">
-              <div class="forecast-date">Fri</div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-               
+                <div class="forecast-date"></div>
+              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="40">
+              <div class="weather-forecast-temperature">      
               </div>
             </div>
             <div class="col-2">
-              <div class="forecast-date">Sat</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
-              <div class="weather-forecast-temperature">
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="forecast-date">Sun</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+              <div class="forecast-date"></div>
+              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
             <div class="col-2">
-              <div class="forecast-date">Mon</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+              <div class="forecast-date"></div>
+              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
             <div class="col-2">
-              <div class="forecast-date">Tue</div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+              <div class="forecast-date"></div>
+              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
+              <div class="weather-forecast-temperature">
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="forecast-date"></div>
+              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
@@ -103,6 +102,6 @@
           > Open-source code by</a>
           Khalia Santos-Johnson
         </small>
-  <script src="src/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
