--- a/vanilla-weatherApp/index.html
+++ b/vanilla-weatherApp/index.html
@@ -64,35 +64,29 @@
             <div class="col-2">…
                 <div class="weather-forecast-temperature"></div>  
                 <div class="forecast-date"></div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="40">
             </div>
             <div class="col-2">
-                <div class="forecast-date"></div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="40">
+                <div class="forecast-date"></div>   
               <div class="weather-forecast-temperature">      
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date"></div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date"></div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date"></div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
             <div class="col-2">
               <div class="forecast-date"></div>
-              <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="40">
               <div class="weather-forecast-temperature">
               </div>
             </div>
@@ -102,6 +96,6 @@
           > Open-source code by</a>
           Khalia Santos-Johnson
         </small>
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
