--- a/index.html
+++ b/index.html
@@ -61,37 +61,37 @@
           <div class="weather-forecast" id="forecast"></div>
             <div class="row">
               <div class="col-2">…
-                <div class="forecast-date">Thu</div>
+                <div class="forecast-date"></div>
                 <div class="weather-forecast-temperature"></div>
-                <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
+             <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="">
               </div>
               <div class="col-2">
-                <div class="forecast-date">Fri</div>
-                <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="thursday" width="40">
+                <div class="forecast-date"></div>
+                <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature"> 
                 </div>
               </div>
               <div class="col-2">
-                <div class="forecast-date">Sat</div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="forecast-date"></div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
               <div class="col-2">
-                <div class="forecast-date">Sun</div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="forecast-date"></div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
               <div class="col-2">
-                <div class="forecast-date">Mon</div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="forecast-date"></div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
               <div class="col-2">
-                <div class="forecast-date">Tue</div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="thursday" width="40">
+                <div class="forecast-date"></div>
+                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
