--- a/vanilla-weatherApp/index.html
+++ b/vanilla-weatherApp/index.html
@@ -96,6 +96,6 @@
           > Open-source code by</a>
           Khalia Santos-Johnson
         </small>
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
