--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
           > Open-source code by</a>
           Khalia Santos-Johnson
         </small>
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
