--- a/index.html
+++ b/index.html
@@ -63,35 +63,30 @@
               <div class="col-2">…
                 <div class="forecast-date"></div>
                 <div class="weather-forecast-temperature"></div>
-             <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="">
+             
               </div>
               <div class="col-2">
-                <div class="forecast-date"></div>
-                <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="">
+                  <div class="forecast-date"></div>        
                 <div class="weather-forecast-temperature"> 
                 </div>
               </div>
               <div class="col-2">
                 <div class="forecast-date"></div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
               <div class="col-2">
                 <div class="forecast-date"></div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
               <div class="col-2">
                 <div class="forecast-date"></div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
               <div class="col-2">
                 <div class="forecast-date"></div>
-                <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="" width="">
                 <div class="weather-forecast-temperature">
                 </div>
               </div>
@@ -103,6 +98,6 @@
           > Open-source code by</a>
           Khalia Santos-Johnson
         </small>
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
