--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
           </form>
           <div class="overview">
-            <h1 id="current-city">Washington DC</h1>
+            <h1 id="current-city">Washington</h1>
             <ul>
               <li>Last updated: <span id="current-date"></span></li>
               <li id="current-description"></li>
