added humidy & wind

--- a/index.html
+++ b/index.html
@@ -44,16 +44,17 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
+                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" id="icon:"broken-clouds-day">
                 <div>
                   <strong id="current-temperature"></strong>
-                  <span class="units"> °F </span>
+                  <span class="units"> 46°F </span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> km/h</li>
+                <li>Humidity:47 <span id="humidity"></span>%</li>
+                <li>Wind: 15<span id="wind"></span> km/h</li>
               </ul>
             </div>
             </div>
