--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div>
                   <strong id="current-temperature"></strong>
                   <span class="units"> 46°F </span>
+                  <span class="units">°C</span>
                 </div>
               </div>
             </div>
