--- a/vanilla-weatherApp/index.html
+++ b/vanilla-weatherApp/index.html
@@ -36,7 +36,7 @@
             </div>
           </form>
           <div class="overview">
-            <h1 id="current-city">New York</h1>
+            <h1 id="current-city">Washington</h1>
             <ul>
               <li>Last updated: <span id="current-date"></span></li>
               <li id="current-description"></li>
